# wasm-cdt

./: .gitignore  README.md
examples/V4/call/src/: CMakeLists.txt
examples/alloc_mem/: CMakeLists.txt
examples/alloc_mem/include/: alloc_mem.hpp
examples/alloc_mem/src/: CMakeLists.txt  alloc_mem.cpp
examples/call/: CMakeLists.txt
examples/call/include/: call.hpp
examples/call/src/: CMakeLists.txt  call.cpp
examples/database/: CMakeLists.txt
examples/database/include/: database.hpp
examples/database/src/: CMakeLists.txt  database.cpp
examples/database_limit/: CMakeLists.txt
examples/database_limit/include/: database_limit.hpp
examples/database_limit/src/: CMakeLists.txt  database_limit.cpp
examples/hello/include/: hello.hpp
examples/hello/src/: CMakeLists.txt  hello.cpp
examples/index/include/: database.hpp  index.hpp
examples/index/src/: CMakeLists.txt  index.cpp
examples/msig/src/: CMakeLists.txt
examples/print_per_second/: CMakeLists.txt
examples/print_per_second/include/: print_per_second.hpp
examples/print_per_second/src/: CMakeLists.txt  print_per_second.cpp
examples/recursion_call/: CMakeLists.txt
examples/recursion_call/include/: recursion_call.hpp
examples/recursion_call/src/: CMakeLists.txt  recursion_call.cpp
examples/return_value/: CMakeLists.txt
examples/return_value/include/: return_value.hpp
examples/return_value/src/: CMakeLists.txt  return_value.cpp
examples/table_opt/: CMakeLists.txt
examples/table_opt/include/: table_opt.hpp
examples/table_opt/src/: CMakeLists.txt  table_opt.cpp
examples/token-bak/src/: CMakeLists.txt  token.cpp
examples/token/include/: token.hpp
examples/token/src/: token.cpp
libraries/wasmlib/: simple_malloc.cpp
libraries/wasmlib/contracts/: dispatcher.hpp  index_table.hpp  inline_transaction.hpp
